--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -168,8 +168,12 @@ td > code {
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
   font-size: 0.8em;
+  color: $code-text-color;
   background: $code-background-color;
   border-radius: $border-radius;
+  border-style: solid;
+  border-width: 1px;
+  border-color: $code-line-color;
 
   &:before,
   &:after {
