--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,4 +8,6 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
+<script data-ad-client="ca-pub-8018185840014088" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 <!-- end custom head snippets -->
