--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -3,11 +3,9 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- hacoma.github.io_footer -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:644px;height:280px"
      data-ad-client="ca-pub-8018185840014088"
-     data-ad-slot="3317768951"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="3317768951"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
